--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "MwsGuy",
   "short_name": "MwsGuy",
+  "version": "1",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
