--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "MwsGuy",
-  "short_name": "MwsGuy",
-  "version": "1",
+  "name": "Movie Saga",
+  "short_name": "Movie Saga",
+  "version": "1.2",
   "start_url": "https://www.mwsguy.com/p/search-movies-worldwide.html",
   "display": "standalone",
   "background_color": "#000000",
