--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Movie Saga",
-  "short_name": "Movie Saga",
+  "name": "Apex",
+  "short_name": "Apex",
   "version": "1.2",
   "start_url": "https://www.mwsguy.com/p/search-movies-worldwide.html",
   "display": "standalone",
